# CussinLang

./: .gitignore  CMakeLists.txt  CussinLang.sublime-project  CussingLangImpl.cpp  NinjaBuild.bat  NinjaBuild.ps1  Problems.md  README.md  ast.cpp  ast.h  build_run.bat  codegen.cpp  codegen.h  lexer.cpp  lexer.h  parser.cpp  parser.h  util.h
CussinLang/.obsidian/: workspace.json
CussinLang/Cussin Lang/: Cussing.md
CussinLang/Cussin Lang/General/: Builtins (Methods).md  Keywords.md  Language Features.md  Used technologies.md
CussinLang/Cussin Lang/Practical/Implementation/: Implementation.md
CussinLang/Cussin Lang/Practical/Implementation/Lexer/: Lexer.md  TokenTypes.md
CussinLang/Cussin Lang/Practical/Implementation/Parser/: Parser.md
CussinLang/Cussin Lang/Practical/LLVM/: LLVM.md
src/: CussingLangImpl.cpp  CussingLangImpl.h
src/jit/: CussinJIT.h
src/lang/: ast.cpp  ast.h  lexer.cpp  lexer.h  parser.cpp  parser.h
src/lang/ast/: BinaryExpressionAST.cpp  BinaryExpressionAST.h  CallExpressionAST.cpp  CallExpressionAST.h  CodegenVisitor.cpp  ExpressionAST.h  ForExpressionAST.cpp  ForExpressionAST.h  FunctionExpressionAST.cpp  FunctionExpressionAST.h  IfExpressionAST.cpp  IfExpressionAST.h  LetExpressionAST.cpp  LetExpressionAST.h  NumberExpressionAST.cpp  NumberExpressionAST.h  PrototypeExpressionAST.cpp  PrototypeExpressionAST.h  ReturnExpressionAST.cpp  ScopeExpressionAST.cpp  ScopeExpressionAST.h  StructExpressionAST.cpp  StructExpressionAST.h  UnaryExpressionAST.cpp  VariableExpressionAST.cpp  VariableExpressionAST.h  Visitor.h  ast.h
src/lang/ast/headers/: BinaryExpressionAST.h  CallExpressionAST.h  CodegenVisitor.h  ExpressionAST.h  ForExpressionAST.h  FunctionExpressionAST.h  IfExpressionAST.h  LetExpressionAST.h  NumberExpressionAST.h  PrototypeExpressionAST.h  ReturnExpressionAST.h  ScopeExpressionAST.h  UnaryExpressionAST.h  VariableExpressionAST.h  Visitor.h
src/llvmstuff/: ContextManager.h  ModuleManager.h  ScopeManager.cpp  ScopeManager.h  SymbolTable.h  codegen.cpp  codegen.h  datastorage.h  visitors.h
src/test/: CussinLangImplTest.cpp
src/utils/: BinopPrecedence.h  DataTypes.h  logger.cpp  logger.h  util.h
